@@ -1,3 +1,7 @@
+2010-11-16  Tom Tromey  <tromey@redhat.com>
+
+	* gdb-add-index.sh: Really remove.
+
 2010-11-16  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	Code cleanup.
